Closed Bug 225245 Opened 22 years ago Closed 21 years ago

image shown as attachment instead of inline if the cid uses single quotes

Categories

(MailNews Core :: MIME, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: amla70, Assigned: timeless)

References

Details

(Keywords: testcase)

Attachments

(1 file, 1 obsolete file)

This is just another case where an image isn't shown inside an HTML but instead as an attachment, similar to bug 61815, bug 131618 and bug 154836 the example mail has two images, the first one is single quoted and isn't shown in Mozilla, the second one uses double quotes and display properly, just this code: Single quoted img: <img src=3D'cid:Incr000'><br> double quoted img: <img src=3D"cid:Incr001"><br> mozilla 2003 10 28 04, winXP
just a simple test case
*** Bug 243286 has been marked as a duplicate of this bug. ***
Attached patch scan for " or ' (obsolete) — Splinter Review
Assignee: sspitzer → timeless
Status: NEW → ASSIGNED
Attachment #148281 - Flags: superreview?(bienvenu)
Attachment #148281 - Flags: review?(bienvenu)
Comment on attachment 148281 [details] [diff] [review] scan for " or ' For future maintainability, could you change the name of the var, since you've changed the meaning of it? I suggest quoteDelimiter. sr=bienvenu with that change. I'll let Ducarroz have a peak at this too.
Attachment #148281 - Flags: superreview?(bienvenu)
Attachment #148281 - Flags: superreview+
Attachment #148281 - Flags: review?(mozilla)
Attachment #148281 - Flags: review?(bienvenu)
Comment on attachment 148281 [details] [diff] [review] scan for " or ' Good catch. As requested by David, please rename the isquote variable, maybe hasDelimiter or just delimiter! R=ducarroz
How extensive is that parser's domain? Does it only affect reading attributes on an HTML tag, or does it also apply to (e.g.) MIME headers? (See bug 129285 comment 5.)
Because I thought only double quotes were allowed in HTML attributes, and I just learned better: <quote src="http://www.w3.org/TR/REC-html40/intro/sgmltut.html#h-3.2.2"> By default, SGML requires that all attribute values be delimited using either double quotation marks (ASCII decimal 34) or single quotation marks (ASCII decimal 39). </quote>
(In reply to comment #7) > Because I thought only double quotes were allowed in HTML attributes [...] Was that intended as an answer to my comment 6? It doesn't quite.
No, unrelated. I didn't know and shared the spec in case somebody else were as confosed as me.
Comment on attachment 148281 [details] [diff] [review] scan for " or ' mozilla/mailnews/mime/src/mimemrel.cpp 1.38
Attachment #148281 - Attachment is obsolete: true
Attachment #148281 - Flags: review?(ducarroz) → review+
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
timeless, what happened with this bug? Was that attachment checked in? If so, why was it obsoleted?
Verifying fixed. I still don't know why timeless marked the patch obsolete.
Status: RESOLVED → VERIFIED
*** Bug 254449 has been marked as a duplicate of this bug. ***
Comment on attachment 148281 [details] [diff] [review] scan for " or ' I just noticed my old test-case message for this was displaying incorrectly in TB 0.8.
Attachment #148281 - Flags: approval-aviary?
(In reply to comment #14) > I just noticed my old test-case message for this was displaying incorrectly in > TB 0.8. ... only when displaying as Original HTML. Simple HTML properly handles both sorts of quotes.
Comment on attachment 148281 [details] [diff] [review] scan for " or ' a=asa for aviary checkin.
Attachment #148281 - Flags: approval-aviary? → approval-aviary+
Product: MailNews → Core
*** Bug 312289 has been marked as a duplicate of this bug. ***
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: