Bug 225245 image shown as attachment instead of inline if the cid uses single quotes R=ducarroz sr=bienvenu